# uniconv

./: CLAUDE.md  CMakeLists.txt  README.md  REFACTORING.md  SKETCH.md  install.sh
.github/workflows/: release.yml
include/uniconv/: plugin_api.h
plugins/examples/cpp/video-to-gif/: CMakeLists.txt  plugin.json  video_to_gif.cpp
src/: main.cpp
src/builtins/: clipboard.cpp  clipboard.h  collect.cpp  collect.h  passthrough.cpp  passthrough.h
src/cli/: parser.cpp  parser.h
src/cli/commands/: config_command.cpp  config_command.h  detect_command.cpp  detect_command.h  formats_command.cpp  formats_command.h  info_command.cpp  info_command.h  plugin_command.cpp  plugin_command.h  preset_command.cpp  preset_command.h  update_command.cpp  update_command.h
src/core/: config_manager.cpp  config_manager.h  dependency_checker.cpp  dependency_checker.h  engine.cpp  execution_graph.cpp  execution_graph.h  installed_plugins.cpp  installed_plugins.h  pipeline.h  pipeline_executor.cpp  pipeline_executor.h  plugin_discovery.cpp  plugin_loader_cli.cpp  plugin_loader_cli.h  plugin_loader_native.cpp  plugin_manager.cpp  plugin_manager.h  plugin_manifest.h  plugin_resolver.cpp  registry_client.cpp  registry_client.h  registry_types.h  types.h
src/core/output/: console_output.cpp  console_output.h  output.h  (+3 more)
src/plugins/: image_transform.cpp  image_transform.h
src/utils/: file_utils.cpp  http_utils.cpp  http_utils.h  json_output.cpp  mime_detector.cpp  mime_detector.h  version_utils.cpp  version_utils.h
tests/: CMakeLists.txt
tests/unit/: test_clipboard.cpp  test_installed_plugins.cpp  test_output_progress.cpp  test_registry_types.cpp  test_scatter_collect.cpp  test_version_utils.cpp
